# wiki-fetch

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: poetry-release.yml
wiki_fetch/: __main__.py  driver.py  generic.py  parser.py  parts.py  stuff.py
