[tool.poetry]
name = "wiki-fetch"
version = "0.1.1"
description = "Parser for Wikipedia.org"
authors = ["d3z <d3z.the.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/d3z-the-dev/wiki-fetch"
repository = "https://github.com/d3z-the-dev/wiki-fetch"
keywords = ["parser", "wiki", "wikipedia", "web scraping"]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "License :: OSI Approved :: Apache Software License",
	"Development Status :: 3 - Alpha",
]
include = [
    "LICENSE.md",
]

[tool.poetry.scripts]
wiki-fetch = "wiki_fetch.__main__:run"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
